gcp5/love-kube/ingress(https).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovebridge-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:680993828418:certificate/a4ff83ab-d8e9-414a-9df0-c04734362e58
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb  # 이 부분을 추가
  rules:
    - host: cyram.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovebridge-service
                port:
                  number: 80
